# hologram-cognitive

./: .gitignore  FIXES_AND_EXPERIMENTS.md  README.md  SCC_IMPACT_ANALYSIS.md  pyproject.toml
hologram/: coordinates.py  dag.py  pressure.py  router.py  session.py  system.py
tests/: SCC_SUMMARY.md  __init__.py  decay_comparison.py  scc_comparison.py  test_basin_dynamics.py  test_claude_cognitive_integration.py  test_convenience_api.py  test_crystallize.py  test_dag.py  test_hologram.py  test_security.py  test_session_api.py  test_turn_state.py  test_v0.1_compat.py  test_v030_integration.py
