[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hologram-cognitive"
version = "0.1.0"
description = "Content-addressed coordinate system for claude-cognitive context routing"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Garret Sutherland", email = "gsutherland@mirrorethic.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
hologram-router = "hologram.router:main"

[project.urls]
Homepage = "https://github.com/GMaN1911/claude-cognitive"
Documentation = "https://github.com/GMaN1911/claude-cognitive/tree/main/hologram-cognitive"
Repository = "https://github.com/GMaN1911/claude-cognitive"

[tool.setuptools.packages.find]
include = ["hologram*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
